# personal-wallet

./: Dockerfile  README.md  conftest.py  pyproject.toml
src/personal_wallet/: __main__.py  cli.py  cli_types.py  commands.py  config.py  constants.py
src/personal_wallet/models/: storage.py  transaction.py  wallet.py
tests/: test_add.py  test_balance.py  test_cli.py  test_config.ini  test_delete.py  test_find.py  test_update.py  test_validation.py
