[tool.poetry]
name = "personal_wallet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.poetry.scripts]
personal_wallet = "personal_wallet.cli:main"

[tool.pylint.'MESSAGES CONTROL']
disable = ["missing-module-docstring", "missing-function-docstring", "missing-class-docstring"]

[packages]
include = [
    { include = "src", from = "src" },
]
